# Motion-Visuals

./: CMakeLists.txt  README.md  controller.cpp  controller.hpp  main.cpp  motion.cpp  motion.hpp  player.cpp  player.hpp  view.cpp  view.hpp
